examples/test/testpolicy17190.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17190
  namespace: namespace471
spec:
  podSelector:
    matchLabels:
      key15: value20
      key3: value14
      key27: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value15
      podSelector:
        matchLabels:
          key14: value27
          key1: value48
